// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationIcon CustomStyleForTo smoke-test 1`] = `
<svg viewbox="0 0 384 512"
     height="25"
     width="25"
     aria-hidden="true"
     focusable="false"
     fill="currentColor"
     xmlns="http://www.w3.org/2000/svg"
     class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE LocationIconstory__StyledLocationIcon-sc-yya1oh-0 egUvIb"
>
  <path fill="currentColor"
        d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
  >
  </path>
</svg>
`;

exports[`LocationIcon From smoke-test 1`] = `
<svg viewbox="0 0 512 512"
     height="25"
     width="25"
     aria-hidden="true"
     focusable="false"
     fill="currentColor"
     xmlns="http://www.w3.org/2000/svg"
     class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf"
>
  <path fill="currentColor"
        d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
  >
  </path>
</svg>
`;

exports[`LocationIcon GenericPlace smoke-test 1`] = `
<svg viewbox="0 0 512 512"
     height="25"
     width="25"
     aria-hidden="true"
     focusable="false"
     fill="currentColor"
     xmlns="http://www.w3.org/2000/svg"
     class="StyledIconBase-ea9ulj-0 hPhvO styled__PlaceIcon-sc-n5xcvc-1 dDjQnL"
>
  <path fill="currentColor"
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
  >
  </path>
</svg>
`;

exports[`LocationIcon To smoke-test 1`] = `
<svg viewbox="0 0 384 512"
     height="25"
     width="25"
     aria-hidden="true"
     focusable="false"
     fill="currentColor"
     xmlns="http://www.w3.org/2000/svg"
     class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE"
>
  <path fill="currentColor"
        d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
  >
  </path>
</svg>
`;
